Updates on renter, navbar and home

--- a/segurenta/src/app/components/home-rent/home-rent.component.html
+++ b/segurenta/src/app/components/home-rent/home-rent.component.html
@@ -156,7 +156,7 @@
     <div class="row col-sm-12 m-0 p-0 " style="height: 400px ">
             <img src="./assets/img/imgPrueba4.jpg " class="img-fluid w-100 " />
             <div class="img-overlay ">
-               <div class="row align-items-center text-center p-0 m-0 ">
+               <!-- <div class="row align-items-center text-center p-0 m-0 ">
                     <div class="col-sm ">
                         <div class="col-sm-12 mx-0 p-0 my-4 ">
                             <p class="h3"><strong>¿Quieres <span class="h1 ">Publicar</span>?</strong></p>
@@ -175,38 +175,38 @@
                             </a>
                         </div>
                     </div> 
-                </div>
-                <!-- <div class="row">
+                </div> -->
+                <div class="row">
                     <div class="col-md-6">
                             <p class="h3"><strong>¿Quieres <span class="h1 ">Publicar</span>?</strong></p>
                             <p class="h3"><strong>Unete a SeguRenta</strong></p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2"></div>
-                    <div class="col-md-1 ">
+                    <div class="col-lg-1 col-md-2 col-sm-1 col-xs-1"></div>
+                    <div class="col-lg-1 col-lg-offset-1 col-md-3 col-sm-4 col-xs-3"> 
                             <button class="btn btn-outline-dark m-1 " type="button ">Beneficios</button>
                     </div>
-                    <div class="col-md-1">
+                    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-3">
                             <button class="btn btn-dark m-1 " type="button ">Regístrate</button>
                     </div>
 
                 </div>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-md-6 col-lg-7">
                            
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-md-3 col-lg-2">
                             <a href="{{linkAppStore}}" target="_blank " class="bg-transparent m-1 ">
                                     <img src="./assets/img/appstore.png ">
                                 </a>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-md-3 col-lg-2">
                             <a href="{{linkPlayStore}}" target="_blank " class="bg-transparent m-1 ">
                                     <img src="./assets/img/googleplay.png ">
                                 </a>
                         </div>
-                </div>-->
+                </div>
     
             </div>
 
