--- a/segurenta/src/app/components/property-detail/property-detail.component.html
+++ b/segurenta/src/app/components/property-detail/property-detail.component.html
@@ -76,7 +76,7 @@
             <p class="col-12 text-justify">{{ property.descripcion }}</p>
 
             <div class="col-12 text-right">
-                <button type="button" class="btn btn-outline-dark">Requisitos</button>
+                <button type="button" (click)="openViewer()" class="btn btn-outline-dark">Requisitos</button>
             </div>
 
             <div class="col-12">
