--- a/segurenta/src/app/components/home/home.component.html
+++ b/segurenta/src/app/components/home/home.component.html
@@ -1,6 +1,91 @@
+<!-- <app-loading *ngIf="isLoading"></app-loading> -->
 <div class="container-fluid p-0">
+    <div id="carouselPrincipal" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselPrincipal" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselPrincipal" data-slide-to="1"></li>
+            <li data-target="#carouselPrincipal" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./assets/img/bgHome.png" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/img/bgHome.png" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/img/bgHome.png" class="d-block w-100">
+            </div>
+        </div>
+        <div class="img-overlay">
+            <div class="row">
+                <div class="col-lg-3 col-xl-3 d-none d-md-block text-left p-5">
+                    <div class="row">
+                        <div class="col-12 my-2">
+                            <a [href]="linkFacebook" target="_blank">
+                                <button class="btn btn-sm btn-dark rounded-circle" style="height: 45px; width: 45px">
+                                    <fa-icon [icon]="[ 'fab', 'facebook-f']" size="2x"></fa-icon>
+                                </button>
+                            </a>
+                        </div>
+                        <div class="col-12 my-2">
+                            <a [href]="linkInstagram" target="_blank">
+                                <button class="btn btn-sm btn-dark rounded-circle" style="height: 45px; width: 45px">
+                                    <fa-icon [icon]="[ 'fab', 'instagram']" size="2x"></fa-icon>
+                                </button>
+                            </a>
+                        </div>
+                        <div class="col-12 my-2">
+                            <a [href]="linkLinkedIn" target="_blank">
+                                <button class="btn btn-sm btn-dark rounded-circle" style="height: 45px; width: 45px">
+                                    <fa-icon [icon]="[ 'fab', 'linkedin-in']" size="2x"></fa-icon>
+                                </button>
+                            </a>
+                        </div>
+                        <div class="col-12 my-2">
+                            <a [href]="linkTwitter" target="_blank">
+                                <button class="btn btn-sm btn-dark rounded-circle" style="height: 50px; width: 45px">
+                                    <fa-icon [icon]="[ 'fab', 'twitter']" size="2x"></fa-icon>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+                    <div class="col-12" style="margin-top: 10%;">
+                        <div class="input-group">
+                            <input type="text" class="form-control input-transparent" placeholder="Busca tu propiedad ideal">
+                            <div class="input-group-append">
+                                <button class="btn btn-black btn-transparent" type="button">
+                                    <fa-icon class="text-white" [icon]="[ 'fas', 'angle-down']" size="2x"></fa-icon>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 d-none d-md-block" style="margin-top: 40%;">
+                        <a href="{{linkAppStore}}" target="_blank" class="bg-transparent m-1">
+                            <img src="./assets/img/appstore.png">
+                        </a>
+                        <a href="{{linkPlayStore}}" target="_blank" class="bg-transparent m-1">
+                            <img src="./assets/img/googleplay.png">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a> -->
+    </div>
     <!-- First section: Header  -->
-    <div class="row col-sm-12 m-0 p-0">
+    <!-- <div class="row col-sm-12 m-0 p-0">
         <img src="./assets/img/bgHome.png" class="img-fluid w-100" />
         <div class="img-overlay">
             <div class="row">
@@ -57,49 +142,110 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
     <!-- Second section: Propiedades Màs Recientes  -->
-    <div class="row col-sm-12 m-0 p-0">
-        <div class="col-sm-12 my-4">
-            <h2 class="font-weight-bold"><span class="text-muted"><u>P</u>ropiedades</span> Más Recientes</h2>
-        </div>
+    <div class="container-fluid">
         <div class="col-sm-12">
-            <div class="card-columns">
-                <div class="card border-light" *ngFor="let picture of pictures">
-                    <img class="card-img-top" [src]="picture.img">
-                    <div class="card-img-overlay col-sm-12">
-                        <div class="card-title">
-                            <p class="h4 text-white d-inline"><b>{{ picture.state }}</b></p>
-                            <div class="text-white d-inline float-right">
-                                <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] " size="2x "></fa-icon>
-                                <fa-icon class="pr-3 " [icon]="[ 'far', 'heart'] " size="2x "></fa-icon>
-                                <fa-icon [icon]="[ 'far', 'comment-alt'] " size="2x "></fa-icon>
+            <div class="my-4">
+                <h2 class="font-weight-bold"><span class="text-muted"><u>P</u>ropiedades</span> Más Recientes</h2>
+            </div>
+            <div class="row">
+                <div class="col-3" *ngFor="let picture of pictures">
+                    <div class="card border-0">
+                        <img class="card-img-top" [src]="picture.img">
+                        <div class="card-img-overlay">
+                        </div>
+                        <div class="card-body py-1 px-0">
+                            <div class="row">
+                                <div class="col d-none d-lg-block">
+                                    <p class="card-text">
+                                        <fa-icon [icon]="[ 'fas', 'expand-arrows-alt']"></fa-icon>150
+                                    </p>
+                                </div>
+                                <div class="col">
+                                    <fa-icon [icon]="[ 'fas', 'bed']"></fa-icon>
+                                    <p class="card-text d-inline-block h5">
+                                        2
+                                    </p>
+                                </div>
+                                <div class="col">
+                                    <p class="card-text">
+                                        <fa-icon [icon]="[ 'fas', 'toilet']"></fa-icon> 1
+                                    </p>
+                                </div>
+                                <div class="col">
+                                    <p class="card-text d-inline-block">Ver</p>
+                                    <a [routerLink]="['/property-detail']" target="_blank">
+                                        <button class="btn btn-sm btn-dark rounded-circle" width="20" heigth="20">
+                                                    <fa-icon [icon]="[ 'fas', 'plus']"></fa-icon>
+                                                </button>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                        <div class="card-text d-flex bd-highlight">
-                            <div class="card-text w-100 ">
-                                <p class="h4 text-white ">{{ picture.title }}</p>
-                                <p class="card-text text-white ">{{ picture.location }}</p>
-                            </div>
-                            <div class="card-text flex-shrink-1 ">
-                                <p class="h4 text-white ">${{ picture.price }}</p>
-                                <p class="card-text text-white text-right ">{{ picture.period }}</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-body ">
-                        <p class="card-text ">
-                            <fa-icon [icon]="[ 'fas', 'expand-arrows-alt'] " size="2x "></fa-icon> 50&nbsp;&nbsp;
-                            <fa-icon [icon]="[ 'fas', 'bed'] " size="2x "></fa-icon> 2&nbsp;&nbsp;
-                            <fa-icon [icon]="[ 'fas', 'toilet'] " size="2x "></fa-icon> 1&nbsp;&nbsp;
-                            <!-- <fa-icon [icon]="[ 'fas', 'plus-circle'] " size="2x "></fa-icon> -->
-                        </p>
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="col-sm-12">
+                <div class="card-columns">
+                    <div class="card border-0 mb-3 bg-transparent " style="max-width: 15rem;" *ngFor="let picture of pictures ">
+                        <img class="card-img-top " [src]="picture.img ">
+                        <div class="card-img-overlay p-0 img-opacity">
+                            <div class="card-title p-1">
+                                <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
+                                <div class="text-white d-inline float-right">
+                                    <a>
+                                        <fa-icon class="pr-3" [icon]="[ 'fas', 'share-alt'] "></fa-icon>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="card-text">
+                                <div class="card-text bottom-left">
+                                    <p class="text-white">{{ picture.title }}<br>{{ picture.location }}</p>
+                                </div>
+                                <div class="card-text bottom-right">
+                                    <p class="text-white">${{ picture.price }}<br>{{ picture.period }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card border-light" style="width: 18rem;" *ngFor="let picture of pictures">
+                        <img class="card-img-top" [src]="picture.img">
+                        <div class="card-img-overlay col-sm-12" [routerLink]="['/property-detail']">
+                            <div class="card-title">
+                                <p class="h4 text-white d-inline"><b>{{ picture.state }}</b></p>
+                                <div class="text-white d-inline float-right">
+                                    <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] " size="2x "></fa-icon>
+                                    <fa-icon class="pr-3 " [icon]="[ 'far', 'heart'] " size="2x "></fa-icon>
+                                    <fa-icon [icon]="[ 'far', 'comment-alt'] " size="2x "></fa-icon>
+                                </div>
+                            </div>
+                            <div class="card-text d-flex bd-highlight">
+                                <div class="card-text w-100 ">
+                                    <p class="h4 text-white ">{{ picture.title }}</p>
+                                    <p class="card-text text-white ">{{ picture.location }}</p>
+                                </div>
+                                <div class="card-text flex-shrink-1 ">
+                                    <p class="h4 text-white ">${{ picture.price }}</p>
+                                    <p class="card-text text-white text-right ">{{ picture.period }}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body ">
+                            <p class="card-text ">
+                                <fa-icon [icon]="[ 'fas', 'expand-arrows-alt']"></fa-icon> 50&nbsp;&nbsp;
+                                <fa-icon [icon]="[ 'fas', 'bed']"></fa-icon> 2&nbsp;&nbsp;
+                                <fa-icon [icon]="[ 'fas', 'toilet']"></fa-icon> 1&nbsp;&nbsp;
+                                <!-- <fa-icon [icon]="[ 'fas', 'plus-circle'] " size="2x "></fa-icon> -->
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+        </div>
     </div>
+
 
     <!-- Third section -->
     <div class="row col-sm-12 m-0 p-0 " style="height: 400px ">
