--- a/segurenta/src/app/components/property-detail/property-detail.component.html
+++ b/segurenta/src/app/components/property-detail/property-detail.component.html
@@ -3,15 +3,65 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 col-xl-8">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-11 col-xl-11">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <video class="embed-responsive-item" src="{{ property.urlVideo }}" allowfullscreen autoplay></video>
+                    <div *ngIf="property.urlVideo && imageSelected === ''">
+                        <vg-player>
+                            <vg-overlay-play></vg-overlay-play>
+                            <vg-buffering></vg-buffering>
+
+                            <vg-scrub-bar>
+                                <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
+                                <vg-scrub-bar-buffering-time></vg-scrub-bar-buffering-time>
+                            </vg-scrub-bar>
+
+                            <vg-controls>
+                                <vg-play-pause></vg-play-pause>
+
+                                <vg-time-display vgProperty="current" vgFormat="mm:ss"></vg-time-display>
+
+                                <vg-scrub-bar style="pointer-events: none;"></vg-scrub-bar>
+
+                                <vg-time-display vgProperty="total" vgFormat="mm:ss"></vg-time-display>
+
+                                <vg-mute></vg-mute>
+                                <vg-volume></vg-volume>
+
+                                <vg-fullscreen></vg-fullscreen>
+                            </vg-controls>
+
+                            <video [vgMedia]="media" #media id="singleVideo" preload="auto" crossorigin>
+                                        <source src="{{ property.urlVideo }}" type="video/mp4">
+                                    </video>
+                        </vg-player>
                     </div>
+                    <div *ngIf="imageSelected">
+                        <img src="{{ imageSelected }}" class="rounded img-responsive">
+                    </div>
+
+                    <!-- <vg-player>
+                        <video [vgMedia]="media" #media id="singleVideo" preload="auto" controls>
+                            <source src="{{ property.urlVideo }}" type="video/mp4">
+                        </video>
+                    </vg-player> -->
+                    <!-- <div class="embed-responsive embed-responsive-16by9">
+                        <video class="embed-responsive-item" src="{{ property.urlVideo }}" allowfullscreen autoplay></video>
+                    </div> -->
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-1 col-xl-1 text-center p-0">
+                    <div class="row" *ngIf="property.urlVideo">
+                        <div class="col-12 mb-1">
+                            <a (click)="showVideo()">
+                                <img src="./assets/img/imgVideo.png" class="rounded img-responsive" width="70" height="50">
+                                <div class="card-img-overlay p-0 img-opacity">
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                     <div class="row" *ngFor="let item of property.imagenes">
                         <div class="col-12 mb-1">
-                            <a>
-                                <img src="{{ item.url }}" class="rounded img-responsive" height="50">
+                            <a (click)="changeImage(item.url)">
+                                <img src="{{ item.url }}" class="rounded img-responsive" width="70" height="50">
+                                <div class="card-img-overlay p-0 img-opacity">
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -20,8 +70,14 @@
             <div class="row mt-2">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6" style="border-right: black 1px solid;">
                     <div class="row">
-                        <a class="col-3"><img src="./assets/img/usrPrueba.png" class="rounded-circle" width="70" height="70"></a>
-                        <p class="col-6">Horario para agendar una cita: <br>Lun-Sab, 10:00 - 10:45</p>
+                        <!-- <a class="col-3" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?"><img src="./assets/img/usrPrueba.png" class="rounded-circle" width="75" height="75"></a> -->
+                        <a class="col-3">
+                            <img src="./assets/img/usrPrueba.png" class="rounded-circle" width="75" height="75">
+                        </a>
+                        <div class="col-6">
+                            <p class="h5" style="color: #808080;">Horario para agendar una cita:</p>
+                            <p style="color: #808080;">Lun-Sab, 10:00 - 10:45</p>
+                        </div>
                         <div class="col-3">
                             <button class="btn btn-dark rounded-circle" style="height: 70px; width: 70px;">
                                 <fa-icon [icon]="[ 'far', 'calendar-alt']" size="2x"></fa-icon>
@@ -30,14 +86,16 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                    <h2 class="col-12">{{ property.noCitas }} personas citadas</h2>
-                    <p class="col-12">Publicado: {{ property.fechaAlta }}</p>
+                    <h2 class="col-12" style="color: #808080;">{{ property.noCitas }}
+                        <small class="h2" style="color: #606060;"> personas citadas</small>
+                    </h2>
+                    <p class="col-12 h5" style="color: #808080;">Publicado: <a class="text-decoration-none" style="color: #0D62B7;">{{ property.fechaAlta }}</a></p>
                 </div>
             </div>
             <div class="row mt-2">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                     <div class="row">
-                        <h4 class="col-12">Características</h4>
+                        <h5 class="col-12" style="color: #808080;">Características</h5>
                         <div class="col-6 my-1" *ngFor="let item of property.caracteristicas">
                             <div class="row">
                                 <div class="col-3">
@@ -52,7 +110,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                     <div class="row">
-                        <h4 class="col-12">Amenidades</h4>
+                        <h5 class="col-12" style="color: #808080;">Amenidades</h5>
                         <div class="col-2 m-1" *ngFor="let item of property.amenidades">
                             <button class="btn btn-outline-dark rounded-circle" style="height: 75px; width: 75px;">
                                       <fa-icon [icon]="[ item.tipo, item.icono]" size="2x"></fa-icon>
@@ -69,18 +127,17 @@
             </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
-            <h1 class="col-12" style="color: #808080;"><b>{{ property.alias }}</b></h1>
-            <h4 class="col-12">Renta {{ property.periodicidad }}: ${{ property.precioRenta }}</h4>
-            <h4 class="col-12">Mantenimiento: ${{ property.mantenimiento }}</h4>
+            <h2 class="col-12 mb-lg-5 mb-xl-5" style="color: #808080;">{{ property.alias }}</h2>
+            <h5 class="col-12" style="color: #838383;">Renta {{ property.periodicidad }}: {{ property.precioRenta | currency }}</h5>
+            <h5 class="col-12" style="color: #838383;">Mantenimiento: {{ property.mantenimiento | currency }}</h5>
+            <p class="col-12 text-justify small" style="color: #4d4d4d;">{{ property.descripcion }}</p>
 
-            <p class="col-12 text-justify">{{ property.descripcion }}</p>
-
-            <div class="col-12 text-right">
-                <button type="button" (click)="openViewer()" class="btn btn-outline-dark">Requisitos</button>
+            <div class="col-12 text-right my-lg-5 my-xl-5">
+                <button type="button" (click)="openViewer()" class="btn btn-outline-dark" style="border-radius: 8px">Requisitos</button>
             </div>
 
             <div class="col-12">
-                <h5 class="font-weight-bold"><small class="text-muted"><u>E</u>xplora la zona</small> Puntos de interés</h5>
+                <h5 style="color: #808080;"><small style="color: #838383;"><u>E</u>xplora la zona</small> Puntos de interés</h5>
                 <app-map></app-map>
             </div>
         </div>
