--- a/segurenta/src/styles.css
+++ b/segurenta/src/styles.css
@@ -1,9 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
+
+/* @font-face {
+    font-family: 'Montserrat';
+    src: url('/assets/fonts/Montserrat/Montserrat-Regular.ttf');
+} */
+
 @font-face {
     font-family: 'Montserrat';
-    src: url('/assets/fonts/Montserrat/Montserrat-Thin.ttf');
+    font-style: normal;
+    font-weight: 400;
+    src: local('Montserrat-Regular'), url('/assets/fonts/Montserrat/Montserrat-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: bold;
+    font-weight: 700;
+    src: local('Montserrat-Bold'), url('/assets/fonts/Montserrat/Montserrat-Bold.ttf');
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: thin;
+    font-weight: 100;
+    src: local('Montserrat-Thin'), url('/assets/fonts/Montserrat/Montserrat-Thin.ttf');
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 400;
+    src: local('Montserrat-Italic'), url('/assets/fonts/Montserrat/Montserrat-Italic.ttf');
 }
 
 * {
