--- a/segurenta/src/app/components/home/home.component.html
+++ b/segurenta/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="img-overlay">
             <div class="row">
-                <div class="col-lg-3 col-xl-3 d-none d-md-block text-left p-5">
+                <div class="col-lg-3 col-xl-3 col-md-3 d-none d-md-block text-left p-5">
                     <div class="row">
                         <div class="col-12 my-2">
                             <a [href]="linkFacebook" target="_blank">
@@ -52,97 +52,44 @@
                     </div>
 
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                    <div class="col-12" style="margin-top: 10%;">
-                        <div class="input-group">
-                            <input type="text" class="form-control input-transparent" placeholder="Busca tu propiedad ideal">
-                            <div class="input-group-append">
-                                <button class="btn btn-black btn-transparent" type="button">
-                                    <fa-icon class="text-white" [icon]="[ 'fas', 'angle-down']" size="2x"></fa-icon>
-                                </button>
+
+                <div class="col-sm-10 col-md-6 col-lg-6 col-xl-6">
+                    <div class="row">
+                            
+                    </div>
+                    <div class="row">
+                            <div class="col-12" >
+                                    <div class="input-group">
+                                        <input type="text" class="form-control input-transparent" placeholder="Busca tu propiedad ideal">
+                                        <div class="input-group-append">
+                                            <button class="btn btn-black btn-transparent" type="button">
+                                                <fa-icon class="text-white" [icon]="[ 'fas', 'angle-down']" size="2x"></fa-icon>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>    
+                    </div>
+                        <div class="row">
+                                <div class="col-12 mt-md-5 mt-lg-5 mt-xl-5 mt-sm-0">
+                                        <a href="{{linkAppStore}}" target="_blank" class="bg-transparent m-1">
+                                            <img src="./assets/img/appstore.png">
+                                        </a>
+                                        <a href="{{linkPlayStore}}" target="_blank" class="bg-transparent m-1">
+                                            <img src="./assets/img/googleplay.png">
+                                        </a>
+                                    </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-12 d-none d-md-block" style="margin-top: 40%;">
-                        <a href="{{linkAppStore}}" target="_blank" class="bg-transparent m-1">
-                            <img src="./assets/img/appstore.png">
-                        </a>
-                        <a href="{{linkPlayStore}}" target="_blank" class="bg-transparent m-1">
-                            <img src="./assets/img/googleplay.png">
-                        </a>
-                    </div>
+                    
+                   
                 </div>
             </div>
 
+            
+
         </div>
-        <!-- <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a> -->
+       
     </div>
-    <!-- First section: Header  -->
-    <!-- <div class="row col-sm-12 m-0 p-0">
-        <img src="./assets/img/bgHome.png" class="img-fluid w-100" />
-        <div class="img-overlay">
-            <div class="row">
-                <div class="col-3">
-                    <div class="col-sm-12 mt-2 mb-2">
-                        <a [href]="linkFacebook" target="_blank">
-                            <button class="btn btn-sm btn-dark rounded-circle" style="height: 50px; width: 50px">
-                                        <fa-icon [icon]="[ 'fab', 'facebook-f']" size="2x"></fa-icon>
-                                    </button>
-                        </a>
-                    </div>
-                    <div class="col-sm-12 mb-2">
-                        <a [href]="linkInstagram" target="_blank">
-                            <button class="btn btn-sm btn-dark rounded-circle" style="height: 50px; width: 50px">
-                                        <fa-icon [icon]="[ 'fab', 'instagram']" size="2x"></fa-icon>
-                                    </button>
-                        </a>
-                    </div>
-                    <div class="col-sm-12 mb-2">
-                        <a [href]="linkLinkedIn" target="_blank">
-                            <button class="btn btn-sm btn-dark rounded-circle" style="height: 50px; width: 50px">
-                                        <fa-icon [icon]="[ 'fab', 'linkedin-in']" size="2x"></fa-icon>
-                                    </button>
-                        </a>
-                    </div>
-                    <div class="col-sm-12 mb-2">
-                        <a [href]="linkTwitter" target="_blank">
-                            <button class="btn btn-sm btn-dark rounded-circle" style="height: 50px; width: 50px">
-                                        <fa-icon [icon]="[ 'fab', 'twitter']" size="2x"></fa-icon>
-                                    </button>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="col-12">
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control input-transparent" placeholder="Busca tu propiedad ideal">
-                            <div class="input-group-append">
-                                <button class="btn btn-black btn-transparent" type="button">
-                                    <fa-icon class="text-white" [icon]="[ 'fas', 'angle-down']" size="2x"></fa-icon>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <a href="{{linkAppStore}}" target="_blank" class="bg-transparent m-1">
-                            <img src="./assets/img/appstore.png">
-                        </a>
-                        <a href="{{linkPlayStore}}" target="_blank" class="bg-transparent m-1">
-                            <img src="./assets/img/googleplay.png">
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div> -->
+   
     <!-- Second section: Propiedades Màs Recientes  -->
     <div class="container-fluid">
         <div class="col-sm-12">
@@ -150,10 +97,10 @@
                 <h2 class="font-weight-bold"><span class="text-muted"><u>P</u>ropiedades</span> Más Recientes</h2>
             </div>
             <div class="row">
-                <div class="col-3" *ngFor="let picture of pictures">
+                <div class="col-lg-3 col-md-6 col-sm-12" *ngFor="let picture of pictures">
                     <div class="card border-0">
                         <img class="card-img-top" [src]="picture.img">
-                        <div class="card-img-overlay">
+                        <div class="card-img-overlay" [routerLink]="['/property-detail']">
                         </div>
                         <div class="card-body py-1 px-0">
                             <div class="row">
@@ -173,20 +120,20 @@
                                         <fa-icon [icon]="[ 'fas', 'toilet']"></fa-icon> 1
                                     </p>
                                 </div>
-                                <div class="col">
+                                <!-- <div class="col">
                                     <p class="card-text d-inline-block">Ver</p>
                                     <a [routerLink]="['/property-detail']" target="_blank">
                                         <button class="btn btn-sm btn-dark rounded-circle" width="20" heigth="20">
                                                     <fa-icon [icon]="[ 'fas', 'plus']"></fa-icon>
                                                 </button>
                                     </a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12">
+            <!-- <div class="col-sm-12">
                 <div class="card-columns">
                     <div class="card border-0 mb-3 bg-transparent " style="max-width: 15rem;" *ngFor="let picture of pictures ">
                         <img class="card-img-top " [src]="picture.img ">
@@ -236,12 +183,12 @@
                                 <fa-icon [icon]="[ 'fas', 'expand-arrows-alt']"></fa-icon> 50&nbsp;&nbsp;
                                 <fa-icon [icon]="[ 'fas', 'bed']"></fa-icon> 2&nbsp;&nbsp;
                                 <fa-icon [icon]="[ 'fas', 'toilet']"></fa-icon> 1&nbsp;&nbsp;
-                                <!-- <fa-icon [icon]="[ 'fas', 'plus-circle'] " size="2x "></fa-icon> -->
+                                <fa-icon [icon]="[ 'fas', 'plus-circle'] " size="2x "></fa-icon>
                             </p>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </div>
@@ -261,7 +208,7 @@
                     <button class="btn btn-dark m-1 " type="button ">Regístrate</button>
                 </div>
                 <div class="col-sm ">
-                    <div class="col-sm-12 ">
+                    <div class="col-sm-12 d-none d-lg-block">
                         <a href="{{linkAppStore}}" target="_blank " class="bg-transparent m-1 ">
                             <img src="./assets/img/appstore.png ">
                         </a>
