--- a/segurenta/src/app/components/home-adviser/home-adviser.component.html
+++ b/segurenta/src/app/components/home-adviser/home-adviser.component.html
@@ -1,7 +1,23 @@
 <div class="container-fluid p-0">
     <!-- First section: Header  -->
-    <div class="row col-sm-12 m-0 p-0" style="height: 600px;">
-        <img src="./assets/img/imgPrueba2.png" class="img-fluid w-100 h-100" />
+    <div id="carouselPrincipal" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselPrincipal" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselPrincipal" data-slide-to="1"></li>
+            <li data-target="#carouselPrincipal" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./assets/img/imgPrueba2.png" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/img/imgPrueba2.png" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/img/imgPrueba2.png" class="d-block w-100">
+            </div>
+        </div>
+       
     </div>
 
     <!-- Second section: Opciones -->
@@ -101,19 +117,19 @@
                             <img class="card-img-top " [src]="picture.img ">
                             <div class="card-img-overlay col-sm-12">
                                 <div class="card-title d-flex flex-row align-items-start">
-                                    <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
+                                    <p class="text-white text-state d-inline"><b>{{ picture.state }}</b></p>
                                     <div class="text-white text-right">
                                         <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] "></fa-icon>
                                     </div>
                                 </div>
                                 <div class="card-text d-flex flex-row align-items-end bd-highlight">
                                     <div class="card-text w-100">
-                                        <p class="text-white m-0">{{ picture.title }}</p>
-                                        <p class="card-text text-white m-0">{{ picture.location }}</p>
+                                        <p class="text-white text-state m-0">{{ picture.title }}</p>
+                                        <p class="card-text text-state text-white m-0">{{ picture.location }}</p>
                                     </div>
                                     <div class="card-text flex-shrink-1 ">
-                                        <p class="text-white text-sm-right m-0">{{ picture.date }}</p>
-                                        <p class="card-text text-white text-right m-0">{{ picture.month }}</p>
+                                        <p class="text-white text-state text-sm-right m-0">{{ picture.date }}</p>
+                                        <p class="card-text text-state text-white text-right m-0">{{ picture.month }}</p>
                                     </div>
                                 </div>
                             </div>
@@ -128,19 +144,19 @@
                             <img class="card-img-top " [src]="picture.img ">
                             <div class="card-img-overlay col-sm-12">
                                 <div class="card-title">
-                                    <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
+                                    <p class="text-white text-state d-inline"><b>{{ picture.state }}</b></p>
                                     <div class="text-white d-inline float-right">
                                         <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] "></fa-icon>
                                     </div>
                                 </div>
                                 <div class="card-text d-flex bd-highlight">
                                     <div class="card-text w-100">
-                                        <p class="text-white m-0">{{ picture.title }}</p>
-                                        <p class="card-text text-white m-0">{{ picture.location }}</p>
+                                        <p class="text-white text-state m-0">{{ picture.title }}</p>
+                                        <p class="card-text text-state text-white m-0">{{ picture.location }}</p>
                                     </div>
                                     <div class="card-text flex-shrink-1 ">
-                                        <p class="text-white text-sm-right m-0">{{ picture.date }}</p>
-                                        <p class="card-text text-white text-right m-0">{{ picture.month }}</p>
+                                        <p class="text-white text-state text-sm-right m-0">{{ picture.date }}</p>
+                                        <p class="card-text text-state text-white text-right m-0">{{ picture.month }}</p>
                                     </div>
                                 </div>
                             </div>
@@ -162,7 +178,7 @@
                             <img class="card-img-top " [src]="picture.img ">
                             <div class="card-img-overlay p-0 img-opacity">
                                 <div class="card-title p-1">
-                                    <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
+                                    <p class="text-white text-state d-inline"><b>{{ picture.state }}</b></p>
                                     <div class="text-white d-inline float-right">
                                         <a>
                                             <fa-icon class="pr-3" [icon]="[ 'fas', 'share-alt'] "></fa-icon>
@@ -171,10 +187,10 @@
                                 </div>
                                 <div class="card-text">
                                     <div class="card-text bottom-left">
-                                        <p class="text-white">{{ picture.title }}<br>{{ picture.location }}</p>
+                                        <p class="text-white text-state">{{ picture.title }}<br>{{ picture.location }}</p>
                                     </div>
                                     <div class="card-text bottom-right">
-                                        <p class="text-white">${{ picture.price }}<br>{{ picture.period }}</p>
+                                        <p class="text-white text-state">${{ picture.price }}<br>{{ picture.period }}</p>
                                     </div>
                                 </div>
                             </div>
@@ -203,7 +219,7 @@
                             <img class="card-img-top " [src]="picture.img ">
                             <div class="card-img-overlay p-0 img-opacity">
                                 <div class="card-title p-1">
-                                    <p class="text-white d-inline"><b>{{ picture.state }}</b></p>
+                                    <p class="text-white text-state d-inline"><b>{{ picture.state }}</b></p>
                                     <div class="text-white d-inline float-right">
                                         <a>
                                             <fa-icon class="pr-3" [icon]="[ 'fas', 'share-alt'] "></fa-icon>
@@ -212,10 +228,10 @@
                                 </div>
                                 <div class="card-text">
                                     <div class="card-text bottom-left">
-                                        <p class="text-white">{{ picture.title }}<br>{{ picture.location }}</p>
+                                        <p class="text-white text-state">{{ picture.title }}<br>{{ picture.location }}</p>
                                     </div>
                                     <div class="card-text bottom-right">
-                                        <p class="text-white">${{ picture.price }}<br>{{ picture.period }}</p>
+                                        <p class="text-white text-state">${{ picture.price }}<br>{{ picture.period }}</p>
                                     </div>
                                 </div>
                             </div>
@@ -227,52 +243,46 @@
     </div>
 
     <!-- Fifth section: Mis Propiedades  -->
-    <div class="row col-sm-12 m-0 p-0">
-        <div class="col-sm-12 my-4">
-            <h2 class="font-weight-bold"><span class="text-muted"><u>M</u>is</span> Propiedades</h2>
-        </div>
+    <div class="container-fluid">
         <div class="col-sm-12">
-            <div class="card-deck mb-3">
-                <div class="card border-light" *ngFor="let picture of pictures">
-                    <img class="card-img-top" [src]="picture.img">
-                    <div class="card-img-overlay p-0 img-opacity" [routerLink]="['/property-detail']">
-                        <div class="card-title p-1">
-                            <p class="h4 text-white d-inline"><b>{{ picture.state }}</b></p>
-                            <div class="text-white d-inline float-right">
-                                <a>
-                                    <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] " size="2x "></fa-icon>
-                                </a>
-                            </div>
+            <div class="my-4">
+                <h2 class="font-weight-bold"><span class="text-muted"><u>M</u>is</span> Propiedades</h2>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-12" *ngFor="let picture of pictures">
+                    <div class="card border-0">
+                        <img class="card-img-top" [src]="picture.img">
+                        <div class="card-img-overlay" [routerLink]="['/property-detail']">
                         </div>
-                        <div class="card-text">
-                            <div class="card-text bottom-left">
-                                <p class="h4 text-white">{{ picture.title }}</p>
-                                <p class="card-text text-white">{{ picture.location }}</p>
-                            </div>
-                            <div class="card-text bottom-right">
-                                <p class="h4 text-white">${{ picture.price }}</p>
-                                <p class="card-text text-white text-right">{{ picture.period }}</p>
+                        <div class="card-body py-1 px-0">
+                            <div class="row">
+                                <div class="col d-none d-lg-block">
+                                    <p class="card-text">
+                                        <fa-icon [icon]="[ 'fas', 'expand-arrows-alt']"></fa-icon>150
+                                    </p>
+                                </div>
+                                <div class="col">
+                                    <fa-icon [icon]="[ 'fas', 'bed']"></fa-icon>
+                                    <p class="card-text d-inline-block h5">
+                                        2
+                                    </p>
+                                </div>
+                                <div class="col">
+                                    <p class="card-text">
+                                        <fa-icon [icon]="[ 'fas', 'toilet']"></fa-icon> 1
+                                    </p>
+                                </div>
+                                <!-- <div class="col">
+                                    <p class="card-text d-inline-block">Ver</p>
+                                    <a [routerLink]="['/property-detail']" target="_blank">
+                                        <button class="btn btn-sm btn-dark rounded-circle" width="20" heigth="20">
+                                                    <fa-icon [icon]="[ 'fas', 'plus']"></fa-icon>
+                                                </button>
+                                    </a>
+                                </div> -->
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="card-img-overlay col-sm-12">
-                        <div class="card-title">
-                            <p class="h4 text-white d-inline"><b>{{ picture.state }}</b></p>
-                            <div class="text-white d-inline float-right">
-                                <fa-icon class="pr-3 " [icon]="[ 'fas', 'share-alt'] " size="2x "></fa-icon>
-                            </div>
-                        </div>
-                        <div class="card-text d-flex bd-highlight">
-                            <div class="card-text w-100 ">
-                                <p class="h4 text-white ">{{ picture.title }}</p>
-                                <p class="card-text text-white ">{{ picture.location }}</p>
-                            </div>
-                            <div class="card-text flex-shrink-1 ">
-                                <p class="h4 text-white ">${{ picture.price }}</p>
-                                <p class="card-text text-white text-right ">{{ picture.period }}</p>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </div>
