se integran servicios dummy

--- a/segurenta/src/app/components/upload-video/upload-video.component.html
+++ b/segurenta/src/app/components/upload-video/upload-video.component.html
@@ -1,4 +1,4 @@
-<ngfFormData [files]="files" postName="file" [(FormData)]="sendableFormData"></ngfFormData>
+<!-- <ngfFormData [files]="files" postName="file" [(FormData)]="sendableFormData"></ngfFormData>
 <ngfUploadStatus [(percent)]="progress" [httpEvent]="httpEvent"></ngfUploadStatus>
 
 <div class="inline-block">
@@ -20,4 +20,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
