--- a/segurenta/src/app/components/update-renter/update-renter.component.html
+++ b/segurenta/src/app/components/update-renter/update-renter.component.html
@@ -1,4 +1,4 @@
-<div class="txt-right">
+<!-- <div class="txt-right">
     <h2 mat-dialog-title class="text-center"><small class="txt-title-muted">Editar </small><span class="text-blue-big">Perfil</span></h2>
     <mat-grid-list cols="12" rowHeight="1:5">
         <mat-grid-tile colspan="5" style="margin-left:1%;">
@@ -31,7 +31,7 @@
             </form>
         </mat-grid-tile>
     </mat-grid-list>
-</div>
+</div> -->
 
 
 <!-- 
