--- a/segurenta/src/styles.css
+++ b/segurenta/src/styles.css
@@ -22,8 +22,8 @@
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    font-style: thin;
+    font-family: 'Montserrat-Thin';
+    font-style: normal;
     font-weight: 100;
     src: local('Montserrat-Thin'), url('/assets/fonts/Montserrat/Montserrat-Thin.ttf');
 }
@@ -37,6 +37,10 @@
 
 * {
     font-family: 'Montserrat';
+}
+
+.thin {
+    font-family: 'Montserrat-Thin'
 }
 
 
