--- a/segurenta/src/app/components/home-adviser/home-adviser.component.html
+++ b/segurenta/src/app/components/home-adviser/home-adviser.component.html
@@ -33,7 +33,7 @@
             </div>
             <div class="btn-group-vertical align-items-center mx-5">
                 <a>
-                    <button (click)="openRegisterProperty()" class="btn btn-outline-dark rounded-circle" style="height: 100px; width: 100px; color: white">
+                    <button class="btn btn-outline-dark rounded-circle" data-toggle="modal" data-target=".register-property-modal" style="height: 100px; width: 100px; color: white">
                       <fa-icon [icon]="[ 'fas', 'plus']" size="2x"></fa-icon>
                     </button>
                 </a>
@@ -320,3 +320,4 @@
 </div>
 
 <app-renter-profiler></app-renter-profiler>
+<app-register-property></app-register-property>
