Se agrega hover a las tarjetas del home de manera responsiva

--- a/segurenta/src/app/components/home/home.component.css
+++ b/segurenta/src/app/components/home/home.component.css
@@ -116,6 +116,7 @@ input.input-transparent::placeholder {
 .icon {
     font-size: 48px;
     color: white;
+    padding-top: 50%;
 }
 
 @media (min-width : 992px) and (max-width: 1204px) {
