--- a/segurenta/src/app/home-adviser/home-adviser.component.html
+++ b/segurenta/src/app/home-adviser/home-adviser.component.html
@@ -2,6 +2,11 @@
 <!-- Main Home Adviser - Aqui se cargan los compoenntes.     -->
 <!-- ======================================================= -->
 
+<!-- First section: Header  -->
+<div class="row col-sm-12 m-0 p-0" style="height: 600px;">
+    <img src="./assets/img/imgPrueba2.png" class="img-fluid w-100 h-100" />
+</div>
+
 <app-menu></app-menu>
 
 <!-- <app-propiedades-recientes></app-propiedades-recientes>
