--- a/segurenta/src/app/components/upload-image/upload-image.component.html
+++ b/segurenta/src/app/components/upload-image/upload-image.component.html
@@ -1,4 +1,4 @@
-<!-- <ngfFormData [files]="files" postName="file" [(FormData)]="sendableFormData"></ngfFormData>
+<ngfFormData [files]="files" postName="file" [(FormData)]="sendableFormData"></ngfFormData>
 <ngfUploadStatus [(percent)]="progress" [httpEvent]="httpEvent"></ngfUploadStatus>
 
 <div class="inline-block">
@@ -24,7 +24,7 @@
             <button type="button" class="btn btn-danger btn-xs mb-1" (click)="files.splice(i,1)">X</button>
         </div>
     </div>
-</div> -->
+</div>
 
 
 <!-- <div *ngIf="dragFiles">
