--- a/segurenta/src/app/components/register-property/register-property.component.css
+++ b/segurenta/src/app/components/register-property/register-property.component.css
@@ -18,6 +18,40 @@
     ;
 }
 
-.mat-input-element::placeholder {
-    color: #ddd;
+::ng-deep .mat-form-field-placeholder {
+    color: #ffffff !important;
+}
+
+.btn-white {
+    color: #000000 !important;
+    background-color: #ffffff !important;
+    border-color: #ffffff !important;
+}
+
+.btn-white:hover {
+    color: #ffffff !important;
+    background-color: #000000 !important;
+    border-color: #000000 !important;
+}
+
+.active-step {
+    color: #ffffff !important;
+    background-color: #000000 !important;
+    border-color: #000000 !important;
+}
+
+.inactive-step {
+    color: #000000 !important;
+    background-color: #ffffff !important;
+    border-color: #ffffff !important;
+}
+
+.modal-xl {
+    min-width: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.modal-xl .modal-content {
+    min-height: 100vh !important;
 }
