--- a/segurenta/src/app/components/upload-video/upload-video.component.html
+++ b/segurenta/src/app/components/upload-video/upload-video.component.html
@@ -1,23 +1,14 @@
-<!-- <ngfFormData [files]="files" postName="file" [(FormData)]="sendableFormData"></ngfFormData>
+<ngfFormData [files]="files" postName="file" [(FormData)]="sendableFormData"></ngfFormData>
 <ngfUploadStatus [(percent)]="progress" [httpEvent]="httpEvent"></ngfUploadStatus>
 
-<div class="inline-block">
-    <div ngfDrop multiple="1" selectable="1" [(validDrag)]="validComboDrag" [(files)]="files" [accept]="accept" [maxSize]="maxSizeVideo" [(lastInvalids)]="lastInvalids" [(dragFiles)]="dragFiles" class="well my-drop-zone" [class.invalid-drag]="validComboDrag===false"
-        [class.valid-drag]="validComboDrag" (filesChange)="lastFileAt=getDate()">
-        <p class="text-center">Video <br> (Máx. <strong>20 MB</strong>)</p>
-    </div>
-</div>
-
 <div class="row">
-    <h4 class="m-2">Video</h4>
-    <button type="button" class="btn btn-danger btn-sm" *ngIf="files.length" (click)="files.length=0">
-        Quitar
-    </button>
     <div class="col-12">
-        <div class="box" *ngFor="let item of files;let i=index">
-            <div *ngIf="['video/mp4'].indexOf(item.type)>=0">
-                <div class="previewIcon"><img src="./assets/img/imgVideo.png" class="img-thumbnail"></div>
-            </div>
+        <div style="height: 40vh;" ngfDrop multiple="1" selectable="1" [(files)]="files" [accept]="accept" [maxSize]="maxSizeVideo" class="my-drop-zone" (filesChange)="lastFileAt=getDate()">
+            <p *ngIf="files.length === 0; else videoCargado" class="text-center">Video (Max. 5 Mb) <br> Arrastra tu video o da click para subir</p>
+            <ng-template #videoCargado>
+                <p class="text-center" *ngFor="let file of files">Video Cargado: <br>{{file.name}}<br>{{ file.size/1024/1024 | number:'.2' }} MB</p>
+            </ng-template>
         </div>
     </div>
-</div> -->
+    <a *ngIf="files.length" (click)="files.length=0" class="col-12 text-center text-decoration-none">Quitar video</a>
+</div>
