--- a/segurenta/src/app/home-adviser/home-adviser.component.html
+++ b/segurenta/src/app/home-adviser/home-adviser.component.html
@@ -8,12 +8,20 @@
 </div>
 
 <app-menu></app-menu>
+<br>
+<div class="row">
+    <div class="col-6">
+        <app-request-date></app-request-date>
+    </div>
+    <div class="col-6">
+        <app-in-progress></app-in-progress>
+    </div>
+</div>
+<br>
 
-<!-- <app-propiedades-recientes></app-propiedades-recientes>
-
-<app-publicar></app-publicar>
-
-<app-explorar-zona></app-explorar-zona> -->
+<app-my-property></app-my-property>
+<br>
+<app-explorar-zona></app-explorar-zona>
 
 <!-- ======================================================= -->
 <!-- End Main Home Adviser - Aqui se cargan los compoenntes. -->
