Se agrega home-rent

--- a/segurenta/src/app/home-rent/home-rent.component.html
+++ b/segurenta/src/app/home-rent/home-rent.component.html
@@ -1,3 +1,15 @@
-<p>
-  home-rent works!
-</p>
+<!-- ======================================================= -->
+<!-- Main Home Rent - Aqui se cargan los componentes.     -->
+<!-- ======================================================= -->
+<app-carousel></app-carousel>
+<app-menu></app-menu> 
+
+<app-propiedades-recientes></app-propiedades-recientes>
+
+<app-publicar></app-publicar>
+<app-explorar-zona></app-explorar-zona>
+
+
+<!-- ======================================================= -->
+<!-- End Main Home Rent - Aqui se cargan los componentes. -->
+<!-- ======================================================= -->
