Se agregan componentes al home del renter

--- a/segurenta/src/app/home-rent/home-rent.component.html
+++ b/segurenta/src/app/home-rent/home-rent.component.html
@@ -7,6 +7,16 @@
 <app-propiedades-recientes></app-propiedades-recientes>
 
 <app-publicar></app-publicar>
+<br>
+<div class="row">
+    <div class="col-6">
+        <app-request-date></app-request-date>
+    </div>
+    <div class="col-6">
+        <app-in-progress></app-in-progress>
+    </div>
+</div>
+<br>
 <app-explorar-zona></app-explorar-zona>
 
 
