Se agregan componentes responsivos a home-adviser

--- a/segurenta/src/app/home-adviser/home-adviser.component.html
+++ b/segurenta/src/app/home-adviser/home-adviser.component.html
@@ -10,10 +10,10 @@
 <app-menu></app-menu>
 <br>
 <div class="row">
-    <div class="col-6">
+    <div class="col-lg-6 col-md-12">
         <app-request-date></app-request-date>
     </div>
-    <div class="col-6">
+    <div class="col-lg-6 col-md-12">
         <app-in-progress></app-in-progress>
     </div>
 </div>
