--- a/segurenta/src/app/shared/components/explorar-zona/explorar-zona.component.html
+++ b/segurenta/src/app/shared/components/explorar-zona/explorar-zona.component.html
@@ -8,11 +8,11 @@
                 <img class="card-img-top " [src]="picture.img ">
                 <div class="card-img-overlay right ">
                     <a class="badge rounded-circle badge-dark align-middle " style="width: 70px; height: 70px; ">
-                        <h6 class="text-white ">+{{ countNews }}<br>NUEVAS</h6>
+                        <h6 class="text-card text-white ">+{{ countNews }}<br>NUEVAS</h6>
                     </a>
                 </div>
-                <div class="card-body ">
-                    <h5 class="card-title text-white ">Zona {{ picture.zone }}</h5>
+                <div class="card-body">
+                    <h5 class="text-zones text-white ">Zona {{ picture.zone }}</h5>
                 </div>
             </div>
         </div>
@@ -26,11 +26,11 @@
                 <img class="card-img-top " [src]="picture.img ">
                 <div class="card-img-overlay ">
                     <a class="badge rounded-circle badge-dark align-middle " style="width: 70px; height: 70px; ">
-                        <h6 class="text-white ">+{{ countNews }}<br>NUEVAS</h6>
+                        <h6 class="text-white text-card">+{{ countNews }}<br>NUEVAS</h6>
                     </a>
                 </div>
                 <div class="card-body ">
-                    <h5 class="card-title text-white ">{{ picture.categ }}</h5>
+                    <h5 class="text-zones text-white ">{{ picture.categ }}</h5>
                 </div>
             </div>
         </div>
