--- a/segurenta/src/app/shared/components/navbar/navbar.component.html
+++ b/segurenta/src/app/shared/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
-        <!-- <button class="btn btn-sm btn-outline-light btn-block m-1 col-1" type="button" style="border-radius: 8px; font-size: 0.7rem;" (click)="openRegister()">Registrarse</button> -->
+        <button class="btn btn-sm btn-outline-light btn-block m-1 col-1" type="button" style="border-radius: 8px; font-size: 0.7rem;" (click)="openRegister()">Registrarse</button>
         <button class="btn btn-sm btn-outline-light btn-block m-1 col-1" type="button" style="border-radius: 8px; font-size: 0.7rem;" (click)="openLogin() ">Entrar</button>
     </div>
 
